Fix  alignement of text on boxes
I was having an issue getting the text to align to box container but it turned out i just needed to give the container a width and height that the text has to abide to.

--- a/style.css
+++ b/style.css
@@ -43,20 +43,25 @@ header {
     margin-top: 20px;
     margin-bottom:20px;
 }
-
-.content-row {
-    border:solid black;
-    display:flex;
+.flex-container {
+    display: flex;
     justify-content: center;
-    gap:25px;
+    gap: 30px;
+    margin-bottom: 50px;
+    text-align: center;
 }
 
-.item {
-    border: solid black;
+.container {
     height:100px;
     width:100px;
-    border-radius: 5px;
 }
+.box {
+    border: solid rgb(126, 101, 151);
+    height:100px;
+    width:100px;
+    border-radius: 10px;
+}
+
 .content1 {
     display:flex;
 }
